--- a/package.json
+++ b/package.json
@@ -11,16 +11,23 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "ag-grid-react": "^32.1.0",
+    "antd": "^5.20.6",
     "aos": "^2.3.4",
+    "apexcharts": "^3.53.0",
     "axios": "^1.7.7",
+    "formik": "^2.4.6",
     "helmet": "^7.1.0",
+    "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
-    "scss": "^0.2.4"
+    "scss": "^0.2.4",
+    "socket.io-client": "^4.7.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
