--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "lottie-react": "^2.4.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-redux": "^9.1.2",
