--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aos": "^2.3.4",
     "apexcharts": "^3.53.0",
     "axios": "^1.7.7",
+    "face-api.js": "^0.22.2",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.0",
